--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -96,6 +96,7 @@
 .promo_model {
   height: 100%;
   width: 100%;
+  object-fit: cover;
 }
 
 
@@ -169,7 +170,7 @@
 .image_section_for {
   width: 100%;
   height: 100%;
-  background-size: cover;
+  object-fit: cover;
 }
 
 .filter {
